add items swagger docs
