# package/handler/item.go
@@ -7,6 +7,20 @@ import (
 	"strconv"
 )
 
+// @Summary Create todo item
+// @Security ApiKeyAuth
+// @Tags items
+// @Description create todo item
+// @ID create-item
+// @Accept  json
+// @Produce  json
+// @Param input body todo.TodoItem true "item info"
+// @Param        id   path      int  true  "List ID"
+// @Success 200 {integer} integer 1
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /api/lists/{id}/items/ [post]
 func (h *Handler) createItem(c *gin.Context) {
 	userId, err := getUserId(c)
 	if err != nil {
@@ -31,6 +45,20 @@ func (h *Handler) createItem(c *gin.Context) {
 		"id": id,
 	})
 }
+
+// @Summary Get All todo items
+// @Security ApiKeyAuth
+// @Tags items
+// @Description get all todo items
+// @ID get-all-items
+// @Accept  json
+// @Produce  json
+// @Param        id   path      int  true  "List ID"
+// @Success 200 {integer} integer 1
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /api/lists/{id}/items [get]
 func (h *Handler) getAllItems(c *gin.Context) {
 	userId, err := getUserId(c)
 	if err != nil {
@@ -48,6 +76,20 @@ func (h *Handler) getAllItems(c *gin.Context) {
 	}
 	c.JSON(http.StatusOK, items)
 }
+
+// @Summary Get todo item by id
+// @Security ApiKeyAuth
+// @Tags items
+// @Description get todo item
+// @ID get-item-by-id
+// @Accept  json
+// @Produce  json
+// @Param        id   path      int  true  "Item ID"
+// @Success 200 {integer} integer 1
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /api/items/{id} [get]
 func (h *Handler) getItemById(c *gin.Context) {
 	userId, err := getUserId(c)
 	if err != nil {
@@ -65,6 +107,21 @@ func (h *Handler) getItemById(c *gin.Context) {
 	}
 	c.JSON(http.StatusOK, item)
 }
+
+// @Summary Update todo item
+// @Security ApiKeyAuth
+// @Tags items
+// @Description update todo item
+// @ID update-item
+// @Accept  json
+// @Produce  json
+// @Param input body todo.UpdateItemInput true "item info"
+// @Param        id   path      int  true  "List ID"
+// @Success 200 {integer} integer 1
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /api/items/{id} [put]
 func (h *Handler) updateItem(c *gin.Context) {
 	userId, err := getUserId(c)
 	if err != nil {
@@ -86,6 +143,20 @@ func (h *Handler) updateItem(c *gin.Context) {
 	}
 	c.JSON(http.StatusOK, StatusResponce{Statuc: "ok"})
 }
+
+// @Summary Delete todo item by id
+// @Security ApiKeyAuth
+// @Tags items
+// @Description delete todo item
+// @ID delete-item-by-id
+// @Accept  json
+// @Produce  json
+// @Param        id   path      int  true  "Item ID"
+// @Success 200 {integer} integer 1
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /api/items/{id} [delete]
 func (h *Handler) deleteItem(c *gin.Context) {
 	userId, err := getUserId(c)
 	if err != nil {
